feat: integrate next accounting release
Preserve the validated unreleased accounting, reporting, lifecycle, maintenance, and contract changes directly on main. Public versioning, tagging, and publication remain separate release actions.